--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "classnames": "^2.3.1",
     "ethers": "^5.5.4",
+    "moralis": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-moralis": "^1.3.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
