--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
     "ethers": "^5.5.4",
     "moralis": "^1.3.5",
     "react": "^17.0.2",
