--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-moralis": "^1.3.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "recharts": "^2.1.9",
     "typescript": "^4.6.2",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
